# CMakeDemo

./: CMakeLists.txt  README.md
chapter_1/: CMakeLists.txt
chapter_1/demo_11/: CMakeLists.txt  main.cpp
chapter_1/demo_12/: CMakeLists.txt
chapter_1/demo_12/src/: app.cpp  main.cpp
chapter_2/: CMakeLists.txt
chapter_2/demo_21/: CMakeLists.txt
chapter_2/demo_21/lib/app/: CMakeLists.txt
chapter_2/demo_21/lib/app/include/app/: app.h
chapter_2/demo_21/lib/app/include/app/detail/: app_public.h
chapter_2/demo_21/lib/app/src/: app_private.cpp  app_private.h  app_public.cpp
chapter_2/demo_21/src/: main.cpp
chapter_2/demo_22/: CMakeLists.txt
chapter_2/demo_22/lib/: CMakeLists.txt
chapter_2/demo_22/lib/app_ho/: CMakeLists.txt
chapter_2/demo_22/lib/app_ho/include/app_ho/: app.h
chapter_2/demo_22/lib/app_ho/include/app_ho/detail/: app_public.h
chapter_2/demo_22/src/: main.cpp
chapter_2/demo_23/: CMakeLists.txt
chapter_2/demo_23/lib/add/: CMakeLists.txt
chapter_2/demo_23/lib/add/include/add/: add.h
chapter_2/demo_23/lib/add/include/add/detail/: add.h
chapter_2/demo_23/src/: main.cpp
chapter_2/demo_23/tests/: CMakeLists.txt  add_test.cpp
chapter_3/: .clang-format  CMakeLists.txt
chapter_3/c3/: CMakeLists.txt
chapter_3/c3/include/c3/: header.h  version.h
chapter_3/c3/src/: main.cpp
chapter_3/cmake/: utils.cmake
chapter_3/libs/: CMakeLists.txt
chapter_3/libs/div/: CMakeLists.txt
chapter_3/libs/div/include/div/: div.h
chapter_3/libs/mul/: CMakeLists.txt
chapter_3/libs/mul/include/mul/: mul.h
chapter_3/libs/mul/src/: mul.cpp
chapter_3/tests/: CMakeLists.txt  div_test.cpp  mul_test.cpp
